<resources>
    <string name="app_name">Evento</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_pass">Your Pass</string>
    <string name="menu_info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_logged_in_message">Sign in to save events, reserve seats, book passes.</string>
    '
    <string name="requesting_patience">Loading</string>

    <string name="bulleted_list"><big>Events: </big>\n
        \n <li>All 3 Night Passes</li>\n
        \n <li>Robowars &amp; Robosumo</li>\n
        \n <li>Lazer Tag</li>\n
        \n <li>Lazer Maze</li>\n
        \n <li>Silent Disco</li>\n
        \n <li>Escape Room</li>\n
        \n <li>Quark National Quiz</li>
    </string>
</resources>