<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_agenda" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_pass"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pass" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_info" />

        <item
            android:id="@+id/nav_graph_login"
            android:title="Your Account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            />

    </group>
</menu>