<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_home"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.devlite.evento.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_agenda"
        android:name="com.devlite.evento.fragments.AgendaFragment"
        android:label="@string/menu_agenda"
        tools:layout="@layout/fragment_agenda" />
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.devlite.evento.fragments.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/nav_pass"
        android:name="com.devlite.evento.fragments.PassFragment"
        android:label="@string/menu_pass"
        tools:layout="@layout/fragment_pass" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.devlite.evento.fragments.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>